# hs-linux-service

./: README.md  linux-service.cabal
System/Service/: Common.hs  NetworkManager.hs  Notification.hs  Power.hs
Tests/: Tests.hs
